[gd_scene load_steps=7 format=1]

[ext_resource path="res://assets/Pacman/pacman/pac1.png" type="Texture" id=1]
[ext_resource path="res://assets/Pacman/pacman/pac2.png" type="Texture" id=2]
[ext_resource path="res://scripts/Pacman/Pacman.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 18.4461

[sub_resource type="Animation" id=3]

resource/name = "Die"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 1, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="Pacman" type="AnimatedSprite"]

transform/scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true
script/script = ExtResource( 3 )

[node name="Area" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Shape" type="CollisionShape2D" parent="Area"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="DieAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Die = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="area_enter" from="Area" to="." method="_on_Area_area_enter"]


