[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/Pacman/Pacman.gd" type="Script" id=1]
[ext_resource path="res://assets/Personagem/astronauta.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource/name = "DieAnim"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 1, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.0001, 0.0001 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "down"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "left"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 3 ]
}

[sub_resource type="Animation" id=4]

resource/name = "right"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 6 ]
}

[sub_resource type="Animation" id=5]

resource/name = "up"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 9 ]
}

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 15.7029

[node name="Personagem" type="Node2D"]

transform/scale = Vector2( 0.4, 0.4 )
script/script = ExtResource( 1 )

[node name="AnimatedSprite" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="AnimatedSprite"]

transform/scale = Vector2( 0.0001, 0.0001 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/DieAnim = SubResource( 1 )
anims/down = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/up = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Area" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Shape" type="CollisionShape2D" parent="Area"]

shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="Area" to="." method="_on_Area_area_enter"]


